--- a/application.yml
+++ b/application.yml
@@ -10,6 +10,6 @@ spring:
 ---
 spring:
   profiles: test    #测试环境
-  application
+  application:
     name: microservicecloud-config-atguigu-test
 # 请保存为UTF-8格式
