--- a/microservicecloud-config-dept-client.yml
+++ b/microservicecloud-config-dept-client.yml
@@ -1,24 +1,24 @@
 spring:
   profiles:
-    active:
-    - dev
+  active:
+  - dev
 ---
 server:
-  port:8001
-spring:
+  port: 8001
+  spring:
   profiles: dev
   application:
-   name: microservicecloud-config-dept-client
+    name: microservicecloud-config-dept-client
   datasource:
-   type: com.alibaba.druid.pool.DruidDataSource
-   driver-class-name: com.mysql.cj.jdbc.Driver              # mysql驱动包
-   url: jdbc:mysql://119.3.197.117:3306/cloudDB01              # 数据库名称
-   username: root
-   password: 1qaz@WSX
-   dbcp2:
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://119.3.197.117:3306/cloudDB01
+    username: root
+    password: 1qaz@WSX
+    dbcp2:
       min-idle: 5                                           # 数据库连接池的最小维持连接数
-      initial-size: 5                                       # 初始化连接数
-      max-total: 5                                          # 最大连接数
+      initial-size: 5
+      max-total: 5                                         
       max-wait-millis: 200
 mybatis:
   config-location: classpath:mybatis/mybatis.cfg.xml
@@ -40,7 +40,7 @@ info:
   build.version: $project.version$
 ---
 server:
-  port:8001
+  port: 8001
 spring:
   profiles: test
   application:
